--- a/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout/activity_store.xml
+++ b/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout/activity_store.xml
@@ -6,4 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".StoreActivity">
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </ListView>
+
 </android.support.constraint.ConstraintLayout>
