--- a/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout/activity_store.xml
+++ b/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout/activity_store.xml
@@ -8,7 +8,8 @@
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/list_animal_store">
 
     </ListView>
 
