--- a/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout/content_pet.xml
+++ b/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout/content_pet.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".PetActivity"
+    tools:context=".Views.PetActivity"
     tools:showIn="@layout/app_bar_pet">
 
     <LinearLayout
