--- a/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout/activity_login.xml
+++ b/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout/activity_login.xml
@@ -31,5 +31,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Login"/>
+        <Button
+            android:id="@+id/register_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Register"/>
 
 </LinearLayout>
