--- a/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout/activity_register.xml
+++ b/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout/activity_register.xml
@@ -36,6 +36,7 @@
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:src="@drawable/ic_menu_camera" />
         <ImageView
             android:layout_width="wrap_content"
