--- a/Code/Tamagotchi.Presentation/Client.Website/tamagotchi-web-angular/src/app/board/dashboard/dashboard.component.html
+++ b/Code/Tamagotchi.Presentation/Client.Website/tamagotchi-web-angular/src/app/board/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<p>
-  dashboard works!
-</p>
-<app-animal-card></app-animal-card>
+GRAFICA
+
+<h3 class="tamoc">Animals:</h3>
+<div class="row"><app-animal-card *ngFor="let item of animals"></app-animal-card></div class="row">
