--- a/Code/Tamagotchi.Presentation/Client.Website/tamagotchi-web-angular/src/app/board/animal-card/animal-card.component.html
+++ b/Code/Tamagotchi.Presentation/Client.Website/tamagotchi-web-angular/src/app/board/animal-card/animal-card.component.html
@@ -1,17 +1,32 @@
 <mat-card class="example-card">
   <mat-card-header>
-    <mat-card-title class="text-center"><b>{{animalName}}</b></mat-card-title>
+    <mat-card-title>
+      <div>
+        <b>{{animalName}}</b>
+      </div>
+    </mat-card-title>
   </mat-card-header>
-  <img mat-card-image src="../../../assets/idle.gif" alt="Photo of a Shiba Inu">
+  <img mat-card-image src="../../../assets/idle.gif" alt="Idle photo of the animal">
   <mat-card-content>
-    <p>
-      Number of downloads: <b>{{numberDownloads}}</b>
-    </p>
-    <p>
-      Creator: <b>{{creatorName}}</b>
-    </p>
+    <div>
+      <b>
+        Downloads:</b>
+    </div>
+    <div>
+      {{numberDownloads}}
+    </div>
+    <div>
+      <b>
+        Creator:
+      </b>
+    </div>
+    <div>
+      {{creatorName}}
+    </div>
   </mat-card-content>
   <mat-card-actions>
-    <button id="details" mat-button>Details</button>
+    <div class="text-center">
+      <button id="details" mat-raised-button color="primary">Details</button>
+    </div>
   </mat-card-actions>
 </mat-card>
