--- a/Code/Tamagotchi.Presentation/Client.Website/tamagotchi-web-angular/src/app/toolbar/toolbar.component.css
+++ b/Code/Tamagotchi.Presentation/Client.Website/tamagotchi-web-angular/src/app/toolbar/toolbar.component.css
@@ -1,5 +1,9 @@
-.example-icon {
-  padding: 0 10px;
+.logo-icon {
+  margin-top:2px;
+}
+
+.app-name-text {
+  margin-left: 10px;
 }
 
 .example-spacer {
