--- a/Code/Tamagotchi.Presentation/Client.Website/tamagotchi-web-angular/src/app/toolbar/toolbar.component.html
+++ b/Code/Tamagotchi.Presentation/Client.Website/tamagotchi-web-angular/src/app/toolbar/toolbar.component.html
@@ -1,8 +1,12 @@
 <mat-toolbar color="primary">
     <mat-toolbar-row>
-        <a routerLink="/dashboard"><mat-icon class="example-icon">videogame_asset</mat-icon>
-        <span>Tamagotchi 2018</span></a>
+        <a routerLink="/dashboard">
+            <mat-icon class="logo-icon" svgIcon="logotool"></mat-icon>
+            <span class="app-name-text">Tamagotchi 2018</span>
+        </a>
         <span class="example-spacer"></span>
-        <a routerLink="/documentation"><button mat-raised-button>Download</button></a>
+        <a routerLink="/documentation">
+            <button mat-raised-button>Download</button>
+        </a>
     </mat-toolbar-row>
 </mat-toolbar>
