--- a/Code/Tamagotchi.Presentation/Client.Website/tamagotchi-web-angular/src/app/board/dashboard/dashboard.component.html
+++ b/Code/Tamagotchi.Presentation/Client.Website/tamagotchi-web-angular/src/app/board/dashboard/dashboard.component.html
@@ -1,5 +1,6 @@
-GRAFICA
-
+<div id="chart-container" class="row flexbox-parent" layout-align="center center">
+  <app-chart id="chart-component"></app-chart>
+</div>
 <h3 class="tamoc">Animals:</h3>
 <div class="row">
   <app-animal-card *ngFor="let item of animals"></app-animal-card>
