--- a/Code/Tamagotchi.Presentation/Client.Website/tamagotchi-web-angular/src/app/board/animal-card/animal-card.component.html
+++ b/Code/Tamagotchi.Presentation/Client.Website/tamagotchi-web-angular/src/app/board/animal-card/animal-card.component.html
@@ -26,7 +26,7 @@
   </mat-card-content>
   <mat-card-actions>
     <div class="text-center">
-      <button id="details" mat-raised-button color="primary">Details</button>
+      <button id="details" mat-raised-button color="primary" (click)="openDialog()">Details</button>
     </div>
   </mat-card-actions>
 </mat-card>
