--- a/Code/Tamagotchi.Presentation/Client.Website/tamagotchi-web-angular/src/app/board/dashboard/dashboard.component.html
+++ b/Code/Tamagotchi.Presentation/Client.Website/tamagotchi-web-angular/src/app/board/dashboard/dashboard.component.html
@@ -3,5 +3,5 @@
 </div>
 <h3 class="tamoc">Animals:</h3>
 <div class="row">
-  <app-animal-card *ngFor="let item of animals"></app-animal-card>
+  <app-animal-card *ngFor="let animal of animalsData" [animalCard]="animal"></app-animal-card>
 </div>
