Easy deploy for website

--- a/Code/Tamagotchi.Presentation/Client.Website/tamagotchi-web-angular/src/app/board/animal-card/animal-card.component.css
+++ b/Code/Tamagotchi.Presentation/Client.Website/tamagotchi-web-angular/src/app/board/animal-card/animal-card.component.css
@@ -1,5 +1,6 @@
 .example-card {
-    max-width: 200px;
+    max-width: 220px;
+    min-width: 220px;
     margin: 10px;
     min-height: 450px;
     max-height: 450px;
