--- a/Code/Tamagotchi.Presentation/Client.Website/tamagotchi-web-angular/src/app/board/dashboard.component.css
+++ b/Code/Tamagotchi.Presentation/Client.Website/tamagotchi-web-angular/src/app/board/dashboard.component.css
@@ -1,17 +1,29 @@
 .tamoc {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin-left: 2%;
+    display: none;
 }
 #chart-component{
-    width: 95%;
+    width: 100%;
     height: 100%;
 }
 #chart-container{
-    display: flex;
     height: 300px;
-    margin: 20px;
+    margin-left: 2%;
+    margin-right: 2%;
+    margin-bottom: 2%;
+    margin-top: 2%;
     outline: 2px solid black;
 }
-.example-card {
-    width: 100%;
+#card-container {
+    margin-left: 1%;
+}
+.row.no-gutters {
+    margin-right: 0;
+    margin-left: 0;
+    }
+    .row.no-gutters > [class^="col-"],
+    .row.no-gutters > [class*=" col-"] {
+        padding-right: 0;
+        padding-left: 0;
 }
