--- a/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/values/colors.xml
+++ b/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorBackground">#F4F4F4</color>
+    <color name="colorBlack">#000000</color>
 </resources>
