--- a/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout/activity_login.xml
+++ b/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout/activity_login.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="@string/welcome"
-        android:textColor="@color/colorBlack"
+        android:textColor="@color/colorBackground"
         android:textSize="30sp"
         android:textStyle="bold" />
 
@@ -31,7 +30,8 @@
         android:layout_marginBottom="5dp"
         android:layout_marginStart="25dp"
         android:layout_marginEnd="25dp"
-
+        android:textColor="@color/colorWhite"
+        android:textColorHint="@color/colorHint"
         android:id="@+id/login_input_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -44,7 +44,8 @@
         android:layout_marginBottom="5dp"
         android:layout_marginStart="25dp"
         android:layout_marginEnd="25dp"
-
+        android:textColor="@color/colorWhite"
+        android:textColorHint="@color/colorHint"
         android:id="@+id/login_input_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
