--- a/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout/content_main.xml
+++ b/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout/content_main.xml
@@ -8,4 +8,10 @@
     tools:context=".MainActivity"
     tools:showIn="@layout/app_bar_main">
 
+    <FrameLayout
+        android:id="@+id/placeholder_frame_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </FrameLayout>
+
 </android.support.constraint.ConstraintLayout>
