--- a/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout/activity_entry.xml
+++ b/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout/activity_entry.xml
@@ -6,7 +6,7 @@
     android:background="@drawable/background_gradient"
     android:orientation="vertical"
     android:gravity="center_vertical"
-    tools:context=".EntryActivity">
+    tools:context=".activities.EntryActivity">
 
     <TextView
         android:layout_margin="15dp"
