--- a/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout/fragment_register.xml
+++ b/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout/fragment_register.xml
@@ -11,6 +11,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
+        android:layout_marginBottom="70dp"
         android:orientation="vertical">
 
 
