--- a/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout-land/activity_entry.xml
+++ b/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout-land/activity_entry.xml
@@ -6,7 +6,7 @@
     android:background="@drawable/background_gradient"
     android:orientation="horizontal"
     android:gravity="center_vertical"
-    tools:context=".activities.EntryActivity">
+    tools:context=".views.activities.EntryActivity">
 
     <LinearLayout
         android:layout_width="wrap_content"
