--- a/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout-land/fragment_access_method.xml
+++ b/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout-land/fragment_access_method.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    tools:context=".fragments.AccessMethodFragment">
+    tools:context=".views.fragments.AccessMethodFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
