--- a/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout/activity_store.xml
+++ b/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout/activity_store.xml
@@ -4,14 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".views.activities.MainActivity"
-    tools:showIn="@layout/app_bar_main">
-
-    <FrameLayout
-        android:id="@+id/placeholder_frame_fragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </FrameLayout>
+    tools:context=".views.activities.StoreActivity">
 
 </android.support.constraint.ConstraintLayout>
